[project]
name = "twitter-x-content_DL"
version = "0.1.0"
authors = [
  { name = "Francis Kwan", email = "francis.p.kwan@gmail.com" },
  { name = "vladkens", email = "v.pronsky@gmail.com" },
]
description = "Twitter/X GraphQL scraper (post / thread / search) plus headless-Chromium article extraction"
readme = "readme.md"
requires-python = ">=3.10"
keywords = ["twitter", "x", "scrape", "scrapper", "api", "snscrape", "article", "playwright"]
license = { text = "MIT" }
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
dependencies = [
  "aiosqlite>=0.17.0",
  "fake-useragent>=1.4.0",
  "httpx>=0.26.0",
  "loguru>=0.7.0",
  "pyotp>=2.9.0",
  "beautifulsoup4>=4.13.0",
  "py-machineid>=1.0.0",
]

[project.optional-dependencies]
curl = ["curl-cffi>=0.7.0"]
# Article extraction requires Playwright + a Chromium browser download (~150 MB).
# Install with:  pip install "twitter-x-content_DL[article]"
article = ["playwright>=1.40.0"]

[dependency-groups]
dev = [
  "curl-cffi>=0.7.0",
  "pytest-asyncio>=0.23.3",
  "pytest-cov>=4.1.0",
  "pytest-httpx>=0.28.0",
  "pytest>=7.4.4",
  "ruff>=0.1.11",
  "ty>=0.0.41",
]

[project.urls]
homepage = "https://github.com/franciskwan/twitter-x-content_DL"
repository = "https://github.com/franciskwan/twitter-x-content_DL"
upstream = "https://github.com/vladkens/twscrape"

[project.scripts]
twitter-x-content_DL = "twscrape.cli:run"

[build-system]
requires = ["hatchling>=1.9.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twscrape"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C4", "SIM"]
ignore = ["E501", "UP035", "SIM105"]

[tool.ty.environment]
python-version = "3.10"
python-platform = "all"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
all = "error"
missing-type-argument = "ignore"
missing-override-decorator = "ignore"
